apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'application'
apply plugin: 'eclipse'

sourceSets.main.java.srcDirs = ['src']

def javaVersion = JavaVersion.VERSION_1_8;
sourceCompatibility = javaVersion;
targetCompatibility = javaVersion; // defaults to sourceCompatibility

// Forces this to be compliant with Java 8 when compiling if compiling using a newer Java version
tasks.withType(JavaCompile) {
    options.release = 8
}

dependencies {
      api 'org.jdt.tools:JDTools:1.0'
	  api 'com.google.code.gson:gson:2.9.0'
      implementation 'com.github.jponge:lzma-java:1.3'
}
 
configurations {
    runtimeClasspath
}

repositories {
  mavenLocal()
  mavenCentral() // for transitive dependencies
}

jar {
    manifest {
        attributes 'Class-Path': configurations.runtimeClasspath.files.collect {"$it.name"}.join(' ')
    }
}

// HOW TO BUILD:
//  - OPEN CMD, CD TO PROJECT FOLDER
//  - RUN 'gradle clean'
//  - RUN 'gradle installDist'
//  - CHECK 'build' FOLDER IN PROJECT FOLDER
//  - ???
//  - PROFIT!